# create-olyv-app

./: README.md  pyproject.toml
src/create_olyv_app/: __init__.py  cli.py
src/create_olyv_app/templates/default/: .gitignore  manage.py  pyproject.toml
src/create_olyv_app/templates/default/app/conf/: asgi.py  settings.py  urls.py  wsgi.py
src/create_olyv_app/templates/default/app/home/templates/home/: index.html
src/create_olyv_app/templates/default/app/school/: admin.py  apps.py  forms.py  models.py
src/create_olyv_app/templates/default/app/school/migrations/: 0001_initial.py
src/create_olyv_app/templates/default/app/seed/fixtures/accounts/: users.json
